Reducing configserver hit